fixed horizontal overflow

--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,6 @@ body {
 /* Header */
 section.header {
   height: 100vh;
-  width: 100vw;
 
   color: white;
 
